@@ -1,17 +1,17 @@
 /****************************************************************************
  *
- * $Source: /usr/local/cvsroot/unixlib/source/netlib/c/h_errno,v $
- * $Date: 1997/10/09 20:00:18 $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/netlib/h_errno.c,v $
+ * $Date: 2001/01/29 15:10:20 $
  * $Revision: 1.2 $
  * $State: Exp $
- * $Author: unixlib $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: h_errno,v 1.2 1997/10/09 20:00:18 unixlib Exp $";
+static const char rcs_id[] = "$Id: h_errno.c,v 1.2 2001/01/29 15:10:20 admin Exp $";
 #endif
 
-/* Please note that this should not be defined in any header files.  */
+#include <netdb.h>
 
-volatile int h_errno = 0;
+int h_errno = 0;
